Fix gap of step list for desktop

--- a/src/app/components/steps-section/steps-section.component.css
+++ b/src/app/components/steps-section/steps-section.component.css
@@ -27,5 +27,6 @@
 
   .steps-list {
     flex-direction: column;
+    gap: 2rem;
   }
 }
